# data.maprva.org

./: .gitignore  Dockerfile  README.md  build-areas.js  build-masks.js  build-osm-buildings.js  build-osm-roads.js  build-osm-sidewalks.js  build-osm-surveillance.js  index.mustache  index.yml  package-lock.json  package.json  pyproject.toml
.github/workflows/: deploy.yml
layers/: areas.py  main.py  ped_infra.py  surveillance.py
